Fix date picker alignment

--- a/less/datepicker.less
+++ b/less/datepicker.less
@@ -19,6 +19,7 @@
 		direction: rtl;
 		table tr td span {
 			float: right;
+			text-align: center;
 		}
 	}
 	&-dropdown {
